# sft-dataset-maker

./: .env.example  .gitignore  LICENSE  README.md  doc.md  doc?.md  main.py  pyproject.toml
src/: __init__.py  config.py
src/core/: __init__.py  pipeline.py
src/document_parser/: __init__.py  local_parser.py  mineru_client.py  parser.py
src/llm/: __init__.py  client.py
